force-app/main/default/objects/Resume__c/Resume__c.object-meta.xml
<CustomObject>
    <description>This object represents a resume associated with a profile. For example, a user could create a profile &quot;Technical Program Manager&quot; to apply for TPM roles. They could then create a Resume record of a profile when applying to jobs.</description>
    <label>Resume</label>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>