force-app/main/default/objects/Resume__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>This is the summary that you would like to display on your profile.</inlineHelpText>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>