force-app/main/default/objects/Resume__c/fields/View_PDF__c.field-meta.xml
<CustomField>
    <fullName>View_PDF__c</fullName>
    <formula>HYPERLINK(
  &apos;/apex/BYROS_ResumeAsPDF?id=&apos; &amp; Id &amp; &apos;&amp;mode=inline&apos;,
  &apos;PDF&apos;,
  &apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View PDF</label>
    <type>Text</type>
</CustomField>