force-app/main/default/objects/Resume__c/listViews/My_Resumes.listView-meta.xml
<ListView>
    <fullName>My_Resumes</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>View_PDF__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Resumes</label>
</ListView>